fix search close icon mobile

--- a/sass/propstore/_propstoreauction-catalog.scss
+++ b/sass/propstore/_propstoreauction-catalog.scss
@@ -245,6 +245,8 @@ body.search-index {
 
 	.icon {
 		margin: 0;
+		width: 16px;
+		height: 18px;
 
 		.collapsible-li:not(.active) & {
 			transform: rotate(45deg);
